############################################
# Changelog of the check_nwc_health plugin #
############################################

2013-05-23 1.9.8
- add Brocade Communications Systems, Inc. ICX6610-24-HPOE, IronWare 

2013-05-17 1.9.7.4
- added another fallback for snmp-get_entries
- fixed a bug in uptime (only first minute after reboot)

2013-04-20 1.9.7.3
- fixed a bug in snmpwalk simulation and savestate

2013-04-08 1.9.7.2
- bugfix, interfaces were shown twice in list-interfaces

2013-03-26 1.9.7.1
- set automatic thresholds for link-aggregation-availability

2013-03-25 1.9.7
- added link-aggregation-availability

2013-03-19 1.9.6
- fixed a bug in interface-*
- speedup in interface-* (with --name and 64bit)
- added a hostname/community hash to statefiles

2013-02-13 1.9.5.1
- fixed a bug deep inside snmp bulkwalks and lots of interfaces (Thanks Uestuen Oender)

2013-02-24 1.9.5
- add interface-availability

2013-02-11 1.9.4
- add Cisco Wireless LAN Controller 5500 

2013-02-11 1.9.3.1
- fixed a bug in statefiles with uppercase directory names. (Thanks Matthias Gallinger)

2013-02-10 1.9.3
- add blue coat sg600

2013-02-02 1.9.2
- removed my static ip from FRITZ!BOX interface-usage (Thanks Stef)

2013-01- 1.9.1
- fixed a bug in FFritz!BOX uptime (Thanks Lars Urban)

3013-01 1.9
- add uptime and interface-usage for AVM FRITZ!Box 7390
- add cpu-load and memory-usage for AVM FRITZ!Box 7390

2013-01-13 1.8
-add cpu&memory check for juniper netscreen

2013-01-12 1.7.1
- add a name caching mechanism for f5 bigip pools

2013-01-08 1.7
- add f5 bigip pool completeness
- add member info for failed f5 pools

2012-12-10 1.6
- add checkpoint firewall-1

2012-11-23 1.5
- add 64bit interfaces

2012-09-26 1.4.9.1
- fix a bug in uptime calculation

2012-09-24 1.4.9
- add hp procurve cpu-load and memory-usage
- fix a bug in cisco memory perfdata

2012-08-28 1.4.8
- add hp procurve hardware

2012-08-21 1.4.7.1